--- a/Photostore/sign-up.html
+++ b/Photostore/sign-up.html
@@ -313,9 +313,9 @@
 
         </div><!-- wrapper end -->
 
-        <script type="text/javascript" src="js/_jq.js"></script>
+        <script type="text/javascript" src="js/jq.js"></script>
 
-        <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
+        <script type="text/javascript" src="js/jquery.placeholder.js"></script>
 
 
         <script src="js/activeaxon_menu.js" type="text/javascript"></script> 
