renamed css files

--- a/Photostore/index.html
+++ b/Photostore/index.html
@@ -39,7 +39,7 @@
 
 
         <!-- remprod -->
-        <link rel="stylesheet" href="css/_colorpicker.css">
+        <link rel="stylesheet" href="css/colorpicker.css">
         <!-- end remprod -->
 
         <link href='css/style.css' rel='stylesheet' type='text/css'> 
